@@ -76,7 +76,7 @@ protected:
 	
     virtual bool constructDocument(xmlDocPtr doc);
     virtual bool configureInlets(OEInletMap& inletMap);
-    virtual bool updateDocument();
+    virtual bool updateDocument(xmlDocPtr doc);
     virtual void deconfigureDevice(string deviceId);
     virtual void destroyDevice(string deviceId);
     
